styles/main.css
html {
  --space-1: 0.25rem;
  --space-2: 0.5rem;
  --space-3: 0.75rem;
  --space-4: 1rem;
  --space-5: 1.25rem;
  --space-6: 1.5rem;
  --space-7: 1.75rem;
  --space-8: 2rem;
  --space-9: 4rem;
  --shade-1: hsl(140, 90%, 98%);
  --shade-2: hsl(144, 82%, 95%);
  --shade-3: hsl(148, 72%, 87%);
  --shade-4: hsl(152, 60%, 75%);
  --shade-5: hsl(156, 54%, 61%);
  --shade-6: hsl(160, 50%, 48%);
  --shade-7: hsl(164, 48%, 42%);
  --shade-8: hsl(160, 48%, 34%);
  --shade-9: hsl(172, 45%, 27%);
  --shade-10: hsl(176, 42%, 23%);
  --shade-11: hsl(180, 40%, 18%);
  --shade-12: hsl(184, 38%, 8%);
  --contrast: hsl(320, 70%, 49%);
  --text-light: var(--shade-9);
  --text-dark: var(--shade-1);
  --text: var(--text-light);
  --text-dim: var(--shade-5);
  --text-bright: var(--shade-8);
  --border-dim: var(--shade-3);
  --focus: var(--text-bright);
  --bg: var(--shade-1);
  --bg-dim: var(--shade-2);
  --gutter: clamp(var(--space-4), var(--space-4) + 2vw, var(--space-7));
  --font-1: 0.75rem;
  --font-2: 0.875rem;
  --font-3: 1rem;
  --font-4: 1.25rem;
  --font-5: 1.5rem;
  --font-6: 2rem;
  --font-7: 2.75rem;
  --font-8: 3.25rem;
  font-size: clamp(100%, 100% + 0.2vw, 125%);
  color: var(--text);
  background-color: var(--bg);
  color-scheme: light dark;
  scroll-padding-block: var(--space-6);
  scroll-behavior: smooth;
}

@media (prefers-color-scheme: dark) {
  html {
    --shade-1: hsl(140, 80%, 96%);
    --shade-2: hsl(144, 72%, 92%);
    --shade-3: hsl(148, 62%, 87%);
    --shade-4: hsl(156, 50%, 75%);
    --shade-5: hsl(160, 44%, 61%);
    --shade-6: hsl(164, 40%, 50%);
    --shade-7: hsl(168, 38%, 42%);
    --shade-8: hsl(172, 38%, 34%);
    --shade-9: hsl(176, 35%, 27%);
    --shade-10: hsl(180, 32%, 23%);
    --shade-11: hsl(184, 30%, 10%);
    --shade-12: hsl(188, 28%, 7%);
    --contrast: hsl(320, 75%, 60%);
    --text: var(--text-dark);
    --text-bright: var(--shade-6);
    --bg: var(--shade-12);
    --bg-dim: var(--shade-11);
    --border-dim: var(--shade-10);
  }
}

@media (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: auto;
  }
}

* {
  margin: 0;
  box-sizing: border-box;
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  text-decoration-line: underline;
}

/* All links get a nice default outline */
a:focus {
  outline: 0.125rem solid var(--focus);
  outline-offset: 0.25rem;
}

/* Links with no other styles get a nice rounded outline */
a:not([class]):focus {
  border-radius: 2px;
}

/* Prevents outline if focused with e.g. mouse click */
a:focus:not(:focus-visible) {
  outline: 0;
}

input {
  border: 0;
  border-radius: 2px;
  font: inherit;
  color: inherit;
}

input::placeholder {
  color: var(--code-3);
  opacity: 1;
}

img,
video {
  max-width: 100%;
  height: auto;
}

ul:where([class]),
ol:where([class]) {
  padding: 0;
  list-style: none;
}

h1,
h2,
h3,
h4,
h5 {
  line-height: 1;
}

body {
  font-family: "Spectral", georgia, serif;
  font-family: system-ui, sans-serif;
  display: grid;
  min-height: 100vh;
  /* !IMPORTANT stops horizontal overflow/blowout */
  grid-template-columns: minmax(0, 1fr);
}

.vh {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.block {
  display: block;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.pile > * {
  grid-area: 1 / 1 / 1 / 1;
}

.wrap {
  flex-wrap: wrap;
}

.gap-1 {
  gap: var(--space-1);
}
.gap-2 {
  gap: var(--space-2);
}
.gap-3 {
  gap: var(--space-3);
}
.gap-4 {
  gap: var(--space-4);
}
.gap-5 {
  gap: var(--space-5);
}
.gap-6 {
  gap: var(--space-6);
}
.gap-7 {
  gap: var(--space-7);
}
.gap-8 {
  gap: var(--space-8);
}
.gap-1-5 {
  gap: clamp(var(--space-1), var(--space-1) + 2vw, var(--space-5));
}

.py-1 {
  padding-block: var(--space-1);
}

.px-2 {
  padding-inline: var(--space-2);
}

.py-3 {
  padding-block: var(--space-3);
}

.px-3 {
  padding-inline: var(--space-3);
}

.py-6 {
  padding-block: var(--space-6);
}

.py-8 {
  padding-block: var(--space-8);
}

.py-9 {
  padding-block: var(--space-9);
}

.pt-8 {
  padding-block-start: var(--space-8);
}

.pb-9 {
  padding-block-end: var(--space-9);
}

.ml-2 {
  margin-inline-start: var(--space-2);
}

.pl-8 {
  padding-inline-start: var(--space-8);
}

.gutter {
  padding-inline: var(--gutter);
}

.items-start {
  align-items: start;
}

.items-center {
  align-items: center;
}

.justify-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.text-center {
  text-align: center;
}

.font-bold {
  font-weight: bold;
}

.font-sans {
  font-family: system-ui, sans-serif;
}

.font-serif {
  font-family: "Spectral", serif;
}

.text-small,
small {
  font-size: 0.875em;
}

a[aria-current="true"],
a[aria-current="page"] {
  font-weight: bold;
}

a[aria-current="true"] > svg,
a[aria-current="page"] > svg {
  color: var(--contrast);
}

.color-bright {
  color: var(--text-bright);
}

.color-contrast {
  color: var(--contrast);
}

.bg-dim {
  background-color: var(--bg-dim);
}

.bg-contrast {
  background-color: var(--contrast);
}

.w-100 {
  width: 100%;
}

.max-w-home {
  max-inline-size: 70rem;
}

.max-w-content {
  max-inline-size: 38rem;
}

.mx-auto {
  margin-inline: auto;
}

.lh-1 {
  line-height: 1;
}

.flex-1 {
  flex: 1;
}

.font-1 {
  font-size: var(--font-1);
}
.font-2 {
  font-size: var(--font-2);
}
.font-3 {
  font-size: var(--font-3);
}
.font-4 {
  font-size: var(--font-4);
}
.font-5 {
  font-size: var(--font-5);
}
.font-6 {
  font-size: var(--font-6);
}
.font-7 {
  font-size: var(--font-7);
}
.font-8 {
  font-size: var(--font-8);
}
.font-5-8 {
  font-size: clamp(var(--font-5), var(--font-5) + 3vw, var(--font-8));
}

.skip {
  position: absolute;
  inset-block-start: var(--space-3);
  inset-inline-start: var(--space-3);
  padding-block: var(--space-1);
  padding-inline: var(--space-2);
  background-color: var(--bg);
  border-radius: 2px;
}

.skip:not(:focus):not(:active) {
  clip-path: inset(50%);
  width: 1px;
  height: 1px;
  overflow: hidden;
  white-space: nowrap;
}

.switcher {
  --gap: 1rem;
  --break: 40rem;
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
}

.switcher > * {
  flex-grow: 1;
  flex-basis: calc((var(--break) - (100% - var(--gap))) * 999);
}

.Profile {
  block-size: 100%;
  max-inline-size: 38rem;
  margin-inline: auto;
  --py: var(--space-3);
  --px: var(--gutter);
}

@media (min-width: 38rem) {
  .Profile {
    border-inline: 1px solid var(--border-dim);
  }
}

.BorderBetween > *:not(:last-child) {
  border-block-end: 1px solid var(--border-dim);
}

.ProfileHeader {
  padding-block-end: var(--space-8);
  padding-inline: var(--px);
}

.ProfileCover {
  margin-inline: calc(var(--px) * -1);
  margin-block-end: var(--overlap);
  block-size: 8rem;
  --s: 80px;
  --c1: var(--bg);
  --c2: var(--contrast);

  --_g: var(--c1) 0% 5%, var(--c2) 6% 15%, var(--c1) 16% 25%, var(--c2) 26% 35%,
    var(--c1) 36% 45%, var(--c2) 46% 55%, var(--c1) 56% 65%, var(--c2) 66% 75%,
    var(--c1) 76% 85%, var(--c2) 86% 95%, #0000 96%;
  background: radial-gradient(50% 50% at 100% 0, var(--_g)),
    radial-gradient(50% 50% at 0 100%, var(--_g)),
    radial-gradient(50% 50%, var(--_g)),
    radial-gradient(50% 50%, var(--_g)) calc(var(--s) / 2) calc(var(--s) / 2)
      var(--c1);
  background-size: var(--s) var(--s);
}

.ProfileAvatar {
  display: inline-flex;
  border-radius: 50%;
  border: 0.25rem solid var(--bg);
  overflow: hidden;
}

.ProfileAvatar:focus {
  outline-offset: 0;
  outline-color: var(--focus);
}

.ProfileButton {
  border-radius: 999px;
  display: inline-flex;
  align-items: center;
  gap: var(--space-1);
  padding-block: var(--space-2);
  padding-inline: var(--space-3);
  background-color: var(--contrast);
  color: var(--text-dark);
  font-weight: bold;
}

.Sticky {
  position: sticky;
  top: 0;
  z-index: 10;
  background-color: var(--bg);
}

.SearchInput {
  border-radius: 0;
  padding-block: var(--py);
  padding-inline: var(--px);
  padding-inline-start: calc(var(--px) + 20px + var(--space-1));
  background-color: var(--bg-dim);
}

.SearchInput:focus {
  outline: 0.125rem solid var(--focus);
  outline-offset: -0.125rem;
}

.Search svg {
  margin-inline-start: var(--px);
  color: var(--text-bright);
}

.ProfileNav {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: 1fr;
  font-size: var(--font-2);
  overflow: auto;
  --scroll-bg: var(--bg);
  --scroll-fg: var(--border-dim);
  scrollbar-color: var(--scroll-fg) var(--scroll-bg);
  scrollbar-width: thin;
}

.ProfileNav::-webkit-scrollbar {
  height: var(--space-1);
}

.ProfileNav::-webkit-scrollbar-thumb {
  background: var(--scroll-fg);
}

.ProfileNav::-webkit-scrollbar-track {
  background: var(--scroll-bg);
}

.ProfileNavLink {
  display: flex;
  justify-content: center;
  gap: var(--space-1);
  padding-block: var(--py);
  padding-inline: calc(var(--px) / 2);
  transition: background-color 0.2s;
}

.ProfileNavLink:is(:hover, :focus):not([title="Coming soon"]) {
  text-decoration: none;
  background-color: var(--bg-dim);
}

.ProfileNavLink:is(:hover, :focus):not([title="Coming soon"]) svg {
  color: var(--contrast);
}

.ProfileNavLink:focus {
  outline-offset: -0.125rem;
}

.ProfileNavLink[title="Coming soon"] {
  cursor: not-allowed;
}

.ProfileNavLink[title="Coming soon"]:hover {
  text-decoration: none;
}

.Entry {
  display: flex;
  gap: var(--space-2);
  padding: var(--px);
  padding-block-end: var(--space-8);
  line-height: 1.4;
}

.EntryMeta {
  display: flex;
  gap: var(--space-1);
  align-items: center;
  font-size: var(--font-2);
  color: var(--text-bright);
}

.EntryKind {
  border-radius: 2px;
  text-transform: capitalize;
  align-self: end;
  font-family: system-ui, sans-serif;
}

.EntryTitle {
  font-size: var(--font-3);
}

.EntryIcon {
  align-self: flex-start;
  display: grid;
  place-content: center;
  border-radius: 50%;
  padding: var(--space-2);
  background-color: var(--border-dim);
}

.EntryContent > * + * {
  margin-block-start: var(--space-2);
}

.EntryTags {
  display: flex;
  gap: var(--space-2);
  flex-wrap: wrap;
  font-size: var(--font-2);
  color: var(--text-bright);
}

.EntryMedia {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
  align-items: stretch;
  gap: var(--space-1);
  position: relative;
}

[data-lightbox] summary {
  list-style: none;
  cursor: zoom-in;
  display: block;
  height: 100%;
}

/* Hide arrow on Safari */
[data-lightbox] summary::-webkit-details-marker {
  display: none;
}

[data-lightbox] > summary > img {
  height: 100%;
  object-fit: cover;
}

[data-lightbox][open] summary {
  cursor: zoom-out;
}

[data-lightbox][open] summary::before {
  content: "";
  position: fixed;
  inset: 0;
  background-color: black;
  opacity: 0.5;
}

[data-lightbox][open] summary::after {
  content: "\00D7";
  position: fixed;
  top: 2rem;
  right: 2rem;
  font-size: 4rem;
  line-height: 1;
  color: white;
  z-index: 20;
}

[data-lightbox] summary ~ img {
  width: auto;
}

[data-lightbox][open] summary ~ img {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-width: calc(100% - var(--gutter));
  max-height: calc(100% - var(--gutter));
  border-radius: var(--space-4);
  box-shadow: 0 2px 2px hsla(0, 0%, 0%, 10%), 0 6px 12px hsla(0, 0%, 0%, 25%);
  object-fit: cover;
  z-index: 20;
}

[data-lightbox] summary:focus {
  outline: 0;
}

[data-lightbox] summary:focus img {
  outline: 0.125rem solid var(--focus);
}

[data-lightbox] summary:focus:not(:focus-visible) img {
  outline: 0;
}

[data-lightbox] figcaption {
  text-align: center;
  font-size: 0.875rem;
  color: var(--textLight);
}

